UPDATE: .gitignore and open-meteo dataset

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,5 @@ dataset/DDPM_arcrest_admin_province_csv.csv
 dataset/DDPM_arcrest_admin_tambon_csv.csv
 dataset/ddpm_tambon_hazard_dataset.csv
 dataset/tambon lat lon location.csv
+dataset/open-meteo
+dataset/open-meteo.zip
